--- a/.config/sway/config
+++ b/.config/sway/config
@@ -29,8 +29,14 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 
 ### Idle configuration
 #
-# Example configuration:
+set $lock swaylock -c 330055
+exec swayidle -w \
+	timeout 570 'swaymsg "output * dpms off"' \
+	resume 'swaymsg "output * dpms on"' \
+	before-sleep $lock
+exec swayidle -w timeout 600 $lock
 #
+# Example configuration:
 # exec swayidle -w \
 #          timeout 300 'swaylock -f -c 000000' \
 #          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
@@ -68,6 +74,8 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+d exec $menu
     bindsym $mod+Shift+d exec $binmenu
 
+    # Screenshot
+    bindsym $mod+print exec grim -g "$(slurp)" - | wl-copy
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
     # Despite the name, also works for non-floating windows.
@@ -114,7 +122,7 @@ set $ws4 4
 set $ws5 5
 set $ws6 6
 set $ws7 7
-set $ws8 8
+set $ws8 8:steam
 set $ws9 9
 set $ws10 10
 
@@ -150,6 +158,7 @@ gaps inner 5
 gaps outer 3
 
 #for_window [app_id="Alacritty"] opacity 0.7
+for_window [class="Steam"] move container to workspace number $ws8
 for_window [shell="xwayland"] title_format "%title [XWayland]"
 for_window [app_id="firefox"] move container to workspace number $ws2
 assign [app_id="discord"] $ws9
@@ -234,12 +243,6 @@ bar {
     }
 }
 
-set $lock swaylock -c 330055
-exec swayidle -w \
-	timeout 570 'swaymsg "output * dpms off"' \
-	resume 'swaymsg "output * dpms on"' \
-	before-sleep $lock
-exec swayidle -w timeout 600 $lock
 
 set $lockman exec ~/.config/sway/lock.sh
 bindsym $mod+Shift+x exec $lockman
