--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 !.config/waybar
 !.config/nvim
 !.config/fish
+.config/fish/functions/cp_fsr.fish
+.config/fish/conf.d/local.fish
+.config/fish/conf.d/display.fish
