--- a/.dotfiles/system_files/pam_env.conf
+++ b/.dotfiles/system_files/pam_env.conf
@@ -1,6 +1,6 @@
 XDG_DATA_HOME		DEFAULT=@{HOME}/.local/share
 XDG_DATA_DIRS		DEFAULT=/usr/local/share:/usr/share
-XDG_DATA_HOME		DEFAULT=@{HOME}/.config
+XDG_CONFIG_HOME		DEFAULT=@{HOME}/.config
 
 JAVA_HOME			DEFAULT=/usr
 
@@ -8,3 +8,5 @@ CARGO_HOME			DEFAULT=${XDG_DATA_HOME}/cargo
 
 MOZ_ENABLE_WAYLAND	DEFAULT=1
 STACK_XDG			DEFAULT=1
+STACK_CONFIG		DEFAULT=${XDG_CONFIG_HOME}/stack/config
+STACK_ROOT			DEFAULT=${XDG_DATA_HOME}/stack
