--- a/.config/sway/config
+++ b/.config/sway/config
@@ -167,7 +167,7 @@ gaps inner 5
 gaps outer 3
 
 #for_window [app_id="Alacritty"] opacity 0.7
-for_window [class="Steam"] move container to workspace number $ws8
+for_window [class="steam"] move container to workspace number $ws8
 for_window [shell="xwayland"] title_format "%title [XWayland]"
 for_window [app_id="firefox"] move container to workspace number $ws2
 for_window [app_id="firefox" title="Firefox — Sharing Indicator"] floating enable
