--- a/.config/sway/style.conf
+++ b/.config/sway/style.conf
@@ -2,7 +2,9 @@
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output eDP-1 {
+	background "#883f85" solid_color
+}
 #
 # Example configuration:
 #
