added pacman.conf added flag so files are only installed if changed added lesshistfile location to pam_env

--- a/.dotfiles/system_files/pam_env.conf
+++ b/.dotfiles/system_files/pam_env.conf
@@ -1,10 +1,13 @@
 XDG_DATA_HOME		DEFAULT=@{HOME}/.local/share
 XDG_DATA_DIRS		DEFAULT=/usr/local/share:/usr/share
 XDG_CONFIG_HOME		DEFAULT=@{HOME}/.config
+XDG_CURRENT_DESKTOP DEFAULT=sway
 
 JAVA_HOME			DEFAULT=/usr
 
 CARGO_HOME			DEFAULT=${XDG_DATA_HOME}/cargo
+
+LESSHISTFILE		DEFAULT=${XDG_DATA_HOME}/lesshist
 
 MOZ_ENABLE_WAYLAND	DEFAULT=1
 STACK_XDG			DEFAULT=1
