--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,7 @@
 !.config/waybar
 
 !.config/nvim
-.config/nvim/rplugin.vim
-.config/nvim/site
-.config/nvim/plugin/packer_compiled.lua
+.config/nvim/lazy-lock.json
 
 !.config/fish
 .config/fish/functions/fsrf.fish
