fixes typo in less history file

--- a/.dotfiles/system_files/pam_env.conf
+++ b/.dotfiles/system_files/pam_env.conf
@@ -7,7 +7,7 @@ JAVA_HOME			DEFAULT=/usr
 
 CARGO_HOME			DEFAULT=${XDG_DATA_HOME}/cargo
 
-LESSHISTFILE		DEFAULT=${XDG_DATA_HOME}/lesshist
+LESSHISTFILE		DEFAULT=${XDG_DATA_HOME}/lesshst
 
 MOZ_ENABLE_WAYLAND	DEFAULT=1
 STACK_XDG			DEFAULT=1
