moved to wofi instead of bemenu

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -15,7 +15,8 @@ set $term alacritty
 # on the original workspace that the command was run on.
 set $custommenu cat	~/.config/sway/applist | grep -E ^[^#] --color=never | ~/.config/sway/custom_menu.fish | xargs swaymsg exec --
 set $binmenu ~/.config/sway/binmenu.sh | bemenu | xargs swaymsg exec --
-set $menu ~/.config/sway/menu.sh | xargs swaymsg exec --
+# set $menu ~/.config/sway/menu.sh | xargs swaymsg exec --
+set $menu wofi --show drun
 set $lowerAudioOut pamixer -d 5
 set $raiseAudioOut pamixer -i 5
 set $toggleAudioOut pamixer -t
