--- a/.config/sway/style.conf
+++ b/.config/sway/style.conf
@@ -15,7 +15,7 @@ output eDP-1 {
 gaps inner 5
 gaps outer 3
 
-default_border normal 5
+default_border none
 client.focused #ffffff #aaffaa #333333 #ffffff #aaffaa
 
 #
