added cache and state xdg dirs to env

--- a/.dotfiles/system_files/etc/security/pam_env.conf
+++ b/.dotfiles/system_files/etc/security/pam_env.conf
@@ -1,4 +1,6 @@
 XDG_DATA_HOME		DEFAULT=@{HOME}/.local/share
+XDG_STATE_HOME		DEFAULT=@{HOME}/.local/state
+XDG_CACHE_HOME		DEFAULT=@{HOME}/.cache
 XDG_DATA_DIRS		DEFAULT=/usr/local/share:/usr/share
 XDG_CONFIG_HOME		DEFAULT=@{HOME}/.config
 XDG_CURRENT_DESKTOP DEFAULT=sway
