--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -3,7 +3,7 @@
     "layer": "bottom",
     "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["sway/window"],
-    "modules-right": ["network", "cpu", "wireplumber", "battery", "clock"],
+    "modules-right": ["tray", "network", "cpu", "wireplumber", "battery", "clock"],
     "sway/window": {
         "max-length": 50,
     },
@@ -27,11 +27,12 @@
 	},
 	"network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
+        "format-wifi": "{signalStrength}% ",
+        //"format-wifi": "{essid} ({signalStrength}%) ",
         "format-ethernet": "{ipaddr}/{cidr} ",
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}",
+        "format-alt": "{essid}: {ipaddr}/{cidr}",
 	},
 }
