--- a/.config/git/config
+++ b/.config/git/config
@@ -15,3 +15,8 @@
 	tree = log --graph --oneline
 [core]
 	pager = delta
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
