--- a/.config/sway/style.conf
+++ b/.config/sway/style.conf
@@ -2,7 +2,7 @@
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output eDP-1 {
+output * {
 	background "#553f85" solid_color
 }
 #
