--- a/.config/sway/config
+++ b/.config/sway/config
@@ -55,8 +55,12 @@ exec swayidle -w timeout 600 $lock
 # Read `man 5 sway-input` for more information about this section.
 
 ### Keyboard
-input * {
+input type:keyboard {
     xkb_layout "custom_xkb"
+}
+input type:touchpad {
+    natural_scroll disabled
+    tap enabled
 }
 ### Key bindings
 #
