--- a/.config/sway/config
+++ b/.config/sway/config
@@ -123,15 +123,15 @@ input type:touchpad {
 # Workspaces:
 #
 set $ws1 1:1
-set $ws2 2:Firefox
+set $ws2 2:2
 set $ws3 3:3
 set $ws4 4:4
 set $ws5 5:5
 set $ws6 6:6
 set $ws7 7:7
 set $ws8 8:8
-set $ws9 9:9
-set $ws10 10:10
+set $ws9 9:Mail
+set $ws10 10:Chat
 
     # Switch to workspace
     bindsym $mod+1 workspace number $ws1
