waybar: reduce diagnostic messages from playerctl

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -40,6 +40,6 @@
 	},
 	"custom/media": {
 		"interval": 10,
-		"exec": "playerctl metadata --format '{{title}} -- {{artist}}'"
+		"exec": "playerctl metadata -s --format '{{title}} -- {{artist}}'"
 	},
 }
