--- a/.config/sway/config
+++ b/.config/sway/config
@@ -29,6 +29,8 @@ exec always swayidle -w \
     resume 'swaymsg "output * dpms on"' \
     before-sleep $lock
 exec swayidle -w timeout 600 $lock
+exec keepassxc 1> /dev/null 2> /dev/null
+exec thunderbird 1> /dev/null 2> /dev/null
 #
 # Example configuration:
 # exec swayidle -w \
