sway: use swaybar instead of waybar

--- a/.config/sway/style.conf
+++ b/.config/sway/style.conf
@@ -22,16 +22,22 @@ client.focused #ffffff #aaffaa #333333 #ffffff #aaffaa
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
-bar swaybar_command waybar
-    #strip_workspace_numbers yes
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    #status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
+#bar swaybar_command waybar
+bar {
+	strip_workspace_numbers yes
+	# When the status_command prints a new line to stdout, swaybar updates.
+	# The default just shows the current date and time.
+	#status_command while date +'%Y-%m-%d %I:%M:%S'; do sleep 1; done
+	status_command $HOME/.dotfiles/sway-status/build/main
+	#status_command $HOME/.config/sway/status.sh
+	position top
 
-    #colors {
-    #    statusline #ffffff
-    #    background #323232
-    #    inactive_workspace #32323200 #32323200 #5c5c5c
-    #}
-#}
+	colors {
+		statusline #ffffff
+		background #323232
+	#mode dock|hide|invisible|overlay
+		inactive_workspace #323232 #323232 #9c9c9c
+		focused_workspace #32cc32 #323232 #9c9c9c
+	}
+}
 
