--- a/.config/sway/config
+++ b/.config/sway/config
@@ -83,6 +83,7 @@ input type:tablet_tool {
 
     # Screenshot
     bindsym $mod+print exec grim -g "$(slurp)" - | wl-copy
+    bindsym $mod+Shift+print exec grim - | wl-copy
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
     # Despite the name, also works for non-floating windows.
